--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ __pycache__/
 # C extensions
 *.so
 
+# Google Drive Backup Files
+*.bak
+
+# PyCharm
+.idea/
+
 # Distribution / packaging
 .Python
 build/
